--- a/config/locales/locales.yml
+++ b/config/locales/locales.yml
@@ -2,4 +2,19 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  hello_world: Hello World
+  hello_flash: Hello Flash
+  project: Project
+  projects: Projects
+
+de:
+  hello_world: Hallo Welt
+  hello_flash: Hallo Flash
+  project: Projekt
+  projects: Projekte
+
+ur:
+  hello_world: ہیلو دنیا والو
+  hello_flash: ہیلو فلیش
+  project: پروجیکٹ
+  projects: پراجیکٹس
