--- a/config/locales/locales.yml
+++ b/config/locales/locales.yml
@@ -4,29 +4,83 @@
 en:
   hello_world: Hello World
   hello_flash: Hello Flash
-  project: Project
-  projects: Projects
-  sectors: Sectors
-  partners: Partners
   new: New
   edit: Edit
+  show: Show
+  destroy: Destroy
+  back: Back
+  cancel: Cancel
+  do_you_want_to_delete: Do you want to delete
+  are_you_sure: Are you sure?
+  save: Save
+  project: Project
+  projects: Projects
+  new_project: New project
+  editing_project: Editing project
+  sectors: Sectors
+  partners: Partners
+  new_event: New Event
+  editing_event: Editing Event
+  recent_events: Recent Events
+  add_a_new_event: Add a new event
+  create_a_new_project: Create a New Project
+  back_to_current_project: Back to Current Project
+  back_to_projects: Back to Projects
+  use_current_location: Use Current Location
+  geocode_this_address: Geocode this address
 
 de:
   hello_world: Hallo Welt
   hello_flash: Hallo Flash
-  project: Projekt
-  projects: Projekte
-  sectors: Branchen
-  partners: Partner
   new: Neu
   edit: Bearbeiten
+  show: Zeigen
+  destroy: Zerstören
+  back: Zurück
+  cancel: Abbrechen
+  do_you_want_to_delete: Wollen Sie löschen
+  are_you_sure: Sind Sie sicher?
+  save: Speichern
+  project: Projekt
+  projects: Projekte
+  new_project: Neues Projekt
+  editing_project: Bearbeiten von Projekt
+  sectors: Branchen
+  partners: Partner
+  new_event: Neuer Termin
+  editing_event: Bearbeiten von Event
+  recent_events: Aktuelle Veranstaltungen
+  add_a_new_event: Fügen Sie ein neues Ereignis
+  create_a_new_project: Erstellen eines neuen Projekts
+  back_to_current_project: Zurück zum aktuellen Projekt
+  back_to_projects: Zurück zu Projekte
+  use_current_location: Verwenden Sie Aktueller Standort
+  geocode_this_address: Geocode diese Adresse
 
 ur:
   hello_world: ہیلو دنیا والو
   hello_flash: ہیلو فلیش
-  project: پروجیکٹ
-  projects: پراجیکٹس
-  sectors: شعبہ
-  partners: شریک
   new: نیا
   edit: ترمیم
+  show: دکھائیں
+  destroy: تلف
+  back: پیچھے
+  cancel: منسوخ کریں
+  do_you_want_to_delete: کیا آپ کو حذف کرنا چاہتے ہیں
+  are_you_sure: کیا تمہیں یقین ہے؟
+  save: محفوظ کریں
+  project: پروجیکٹ
+  projects: پراجیکٹس
+  new_project: نیا منصوبہ
+  editing_project: ترمیم منصوبہ
+  sectors: شعبہ
+  partners: شریک
+  new_event: نیا اہم واقعہ
+  editing_event: ترمیم واقعہ
+  recent_events: حالیہ واقعات
+  add_a_new_event: نیا اہم واقعہ شامل کریں
+  create_a_new_project: ایک نیا منصوبہ تشکیل دیں
+  back_to_current_project: موجودہ پروجیکٹ پر واپس جائیں
+  back_to_projects: منصوبوں پر واپس جائیں
+  use_current_location: موجودہ جگہ استعمال کریں
+  geocode_this_address: Geocode this address
